...
                }
                catch (e: Exception) {
                    Log.e("AccountTypeSwitch", "Error changing account type", e)
                }
            },
            colors = SwitchDefaults.colors(), // Use default colors
            modifier = Modifier.testTag("account_type_switch")
        )
    }
}

/**
 * Base composable function for text input fields with error handling.
...
    onEmailChange: (String) -> Unit,
    isError: Boolean = false,
    errorMessage: String? = null,
) {
    var emailState by rememberSaveable { mutableStateOf<String?>(null) }
    TextInput(
        modifier = modifier.testTag("email_input"),
        value = emailState,
        onValueChange = { newEmail ->
            try {
                emailState = newEmail
                onEmailChange(newEmail)
            }
...
    onPasswordChange: (String) -> Unit,
    isError: Boolean = false,
    errorMessage: String? = null,
) {
    var passwordState by rememberSaveable { mutableStateOf<String?>(null) }
    TextInput(
        modifier = modifier.testTag("password_input"),
        value = passwordState,
        onValueChange = { newPassword ->
            try {
                passwordState = newPassword
                onPasswordChange(newPassword)
            } catch (e: Exception) {
...
    modifier: Modifier = Modifier,
    onMakeChange: (String) -> Unit,
    isError: Boolean = false
) {
    // TODO: Replace carMakes placeholder variable here with an API call for valid make and logic given year and model combinations
    //  - API call might be better served in RegistrationScreen.kt
    val carMakes = listOf("Toyota", "Honda", "Ford", "Chevrolet", "BMW", "Audi")

    ComboBoxInput(
        modifier = modifier,
        options = carMakes,
        onOptionSelected = onMakeChange,
        label = { Text(stringResource(R.string.make)) },
...
    modifier: Modifier = Modifier,
    onModelChange: (String) -> Unit,
    isError: Boolean = false
) {
    // TODO: Replace carModels placeholder variable here with an API call for valid model and logic given year and make combinations
    //  - API call might be better served in RegistrationScreen.kt
    val carModels = listOf("Model S", "Model X", "Model 3", "Model Y")

    ComboBoxInput(
        modifier = modifier,
        options = carModels,
        onOptionSelected = onModelChange,
        label = { Text(stringResource(R.string.model)) },
...
fun StateInput(
    modifier: Modifier = Modifier,
    onStateChange: (String) -> Unit,
    isError: Boolean = false
) {
    val usStates = listOf(
        "AL", "AK", "AZ", "AR", "CA", "CO", "CT", "DE", "FL", "GA",
        "HI", "ID", "IL", "IN", "IA", "KS", "KY", "LA", "ME", "MD",
        "MA", "MI", "MN", "MS", "MO", "MT", "NE", "NV", "NH", "NJ",
        "NM", "NY", "NC", "ND", "OH", "OK", "OR", "PA", "RI", "SC",
        "SD", "TN", "TX", "UT", "VT", "VA", "WA", "WV", "WI", "WY"
    )

...
