...
//        if (!isUniqueEmailAddress(email)) {
//            onValidationError("Email already exists")
//            return false
//        }
        // TODO: Add server-side validation for valid email address
//        if (!isValidEmailAddress(email)) {
//            onValidationError("Invalid email address")
//            return false
//        }
        if (passengerAccountRegistrationData.password.isBlank()) {
            onValidationError("Password cannot be empty")
            return false
        }
...
